# elfeed-summary-db

./: CONTRIBUTING.md  PROJECT_REPORT.md  design.org  readme.org
elisp/: elfeed-summary-client.el  elfeed-summary-db-client.el  elfeed-summary-db-gptel-tools.el  elfeed-summary-db-parse.el  elfeed-summary-db-search.el  elfeed-summary-db-server.el  elfeed-summary-db-ui.el  elfeed-summary-db.el  org-db-v3-agenda.el  org-db-v3-client.el  org-db-v3-parse.el  org-db-v3-search.el  org-db-v3-server.el  org-db-v3-ui.el  org-db-v3.el
python/: pyproject.toml
python/elfeed_summary_db_server/: __init__.py  config.py  main.py
python/elfeed_summary_db_server/api/: indexing.py  linked_files.py  search.py  stats.py
python/elfeed_summary_db_server/models/: db_models.py  schemas.py  semantic_schema.py
python/elfeed_summary_db_server/services/: __init__.py  chunking.py  clip_service.py  database.py  document_converter.py  embeddings.py  reranker.py
python/elfeed_summary_db_server/templates/: homepage.html
python/org_db_server/: main.py
python/org_db_server/api/: agenda.py  indexing.py  search.py
python/org_db_server/models/: schemas.py
python/org_db_server/services/: clip_service.py  database.py  docling_service.py
python/org_db_server/templates/: homepage.html
python/scripts/: README.md
python/scripts/benchmarks/: benchmark_search.py  benchmark_semantic_search.py
python/scripts/profiling/: debug_search_performance.py  profile_search.py
python/tests/: test_chunking.py  test_database.py  test_database_schema.py  test_embedding_aggregation.py  test_embeddings.py  test_indexing_api.py  test_ivy_request.el  test_search_api.py
scripts/: setup.sh
